0324웹개발 과제

--- a/1차과제/03/24 웹개발 과제.css
+++ b/1차과제/03/24 웹개발 과제.css
@@ -6,3 +6,4 @@
 .sec2 {background-color: rgb(127, 228, 88); padding: 5px; margin-top: 20px; margin-bottom: 20px;}
 .article1 {background-color: rgb(231, 189, 225);}
 .article2 {background-color: coral;}
+.footer {background-color: rgb(221, 227, 60); margin-top: 20px; margin-bottom: 20px;}
