0404 웹개발 과제

--- a/1차과제/04/0404 웹개발 과제.css
+++ b/1차과제/04/0404 웹개발 과제.css
@@ -2,3 +2,16 @@
     font-size: 10pt;
     font-weight: bold;
 }
+
+.prive {
+    font-size:9pt;
+}
+
+h5 {
+    line-height: 0px;
+}
+
+.last {
+    font-size: 9pt; 
+    line-height:20px;
+}
