--- a/1차과제/04/0404 웹개발 과제2.css
+++ b/1차과제/04/0404 웹개발 과제2.css
@@ -47,3 +47,13 @@ p {
     margin-right: 5%;
 
 }
+
+button { 
+    border: 1px solid rgb(169, 168, 168);
+    border-radius: 1px;
+    width: 90px;
+    font-size: 10pt;
+    font-weight: bold;
+    margin-left: 10px;
+    margin-right: 10px;
+}
