--- a/1차과제/04/0411 웹개발 과제.css
+++ b/1차과제/04/0411 웹개발 과제.css
@@ -15,3 +15,12 @@ img {
     height: 100px;
     border-radius: 20px;
 }
+
+.main {
+    width: 600px;
+    margin-left: auto; 
+    margin-right:auto; 
+    background-color:azure; 
+    padding:10px; 
+    text-align:center
+}
