Update 0425 웹개발 과제.css

--- a/1차과제/04/0425 웹개발 과제.css
+++ b/1차과제/04/0425 웹개발 과제.css
@@ -117,9 +117,11 @@ tr:nth-of-type(odd) {
     width: 350px; height: 300px;
     margin: 5px;
     text-align: left;
+    cursor: pointer;
 }
 
 .section_box2 {
     width: 1100px;
     display: inline-block;
 }
+
