--- a/1차과제/05/0516 포지션 실습.css
+++ b/1차과제/05/0516 포지션 실습.css
@@ -29,7 +29,9 @@ header {
     width: 100%;
     height: 100%;
     margin-left: 250px;
-    margin-top: 50px
+    margin-top: 50px;
+    display: flex;
+    justify-content: left;
 }
 
 aside > div {
@@ -68,10 +70,6 @@ span {
     background-color: rgb(203, 203, 203);
 }
 
-.section > div {
-    display: inline-block;
-}
-
 .article {
     background-color: rgb(255, 255, 255);
     width: 60%;
@@ -100,8 +98,8 @@ span {
     padding-left: 50px;
 }
 
-.rec > h2 {
-    height: 50px;
+.rec > h1 {
+    height: 70px;
     display: flex;
     align-items: center;
 }
