--- a/1차과제/05/0615 트랜스폼.css
+++ b/1차과제/05/0615 트랜스폼.css
@@ -25,18 +25,18 @@
 }
 
 .box {
-    transition: 1s;
+    overflow: hidden;
 }
 
 .text {
     position: relative;
-    bottom: 200px;
     padding: 30px;
     text-align: center;
     width: 300px;
     height: 200px;
     background-color: rgba(0, 0, 0, 0.331);
-    opacity: 1;
+    opacity: 0;
+    transition: 0.1s;
 }
 
 .text > h2 {
@@ -50,4 +50,10 @@
 .box:hover .text {
     opacity: 1;
     transform: translate(0, -200px);
+}
+
+.footer {
+    background-color: aquamarine;
+    text-align: center;
+    margin-top: 20px;
 }
