--- a/1차과제/05/0630 타이머 과제.css
+++ b/1차과제/05/0630 타이머 과제.css
@@ -46,6 +46,8 @@ input {
     height: 50px;
     border-radius: 10px;
     margin-left: 20px;
+    font-size: 20pt;
+    padding-left: 20px;
 }
 
 button {
